# GOLF_MCP

./: companies.csv  db_utils.py  direct_test.py  import os.py  main.py  network_access_guide.sh  pyproject.toml  reports.py  requirements.txt  security_check.sh  test_mcp_client.py  test_mcp_sse_client.py  test_mcp_tools.py  test_remaining_tools.py  test_server_status.py  test_sse.py
mcp_server/: .coverage  README.md  auth.py  golf.json  nohup.out
mcp_server/prompts/: welcome.py
mcp_server/resources/: current_time.py  info.py
mcp_server/tools/: arsiv_verileri.py  ayrintili_depo_hareket_raporu.py  beyanname_bazinda_maliyet_raporu.py  beyanname_islem_sureleri_raporu.py  calculator.py  common.py  depo_stok_miktarlari.py  firma_beyannameleri_gtip_bazinda_rapor.py  genel_master_rapor.py  gonderi_sorgulama_lokasyon_raporu.py  gun_bazli_antrepo_stok_durumu.py  is_emri_listesi.py  islemdeki_dosyalar_raporu.py  kullanilabilir_stok_raporu.py  (+2 more)
tum_sorgular/: Arşiv_Verileri-POSTGRESQL.sql  Ayrıntılı_Depo_Hareket_Raporu-POSTGRESQL.sql  Beyanname_Bazinda_Maliyet_Raporu-POSTGRESQL.sql  Beyanname_İşlem_Süreleri_Raporu-POSTGRESQL.sql  Depo_Stok_Miktarları-POSTGRESQL.sql  Firma_Beyannameleri_GTİP_Bazında_Rapor-POSTGRESQL.sql  Genel_Master_Rapor-POSTGRESQL.sql  Gönderi_Sorgulama_Lokasyon_Raporu-POSTGRESQL.sql  Gün_Bazlı_Antrepo_Stok_Durumu-POSTGRESQL.sql  Kullanılabilir_Stok_Raporu-POSTGRESQL.sql  Kümülatif_Depo_Hareket_Raporu-POSTGRESQL.sql  STK_Bazlı_Stok_Kalan_Gün_Raporu__PALET-POSTGRESQL.sql  İş_Emri_Listesi-POSTGRESQL.sql  İşlemdeki_Dosyalar_Raporu-POSTGRESQL.sql
(+1 files in other folders)
